transition to npm scripts, replace inotifytools with nodemon, fix mobile nav overlap bug, formatting changes

--- a/platform/resources/less/em/mobile_nav.less
+++ b/platform/resources/less/em/mobile_nav.less
@@ -33,6 +33,7 @@
         background: #282C34;
         color: #fff;
         text-align: left;
+        z-index: 1;
         .contents {
             padding: 16px;
             a {
